# RTCSD_homework

./: .gitignore  .gitmodules  README.md
FSM_practise/: README.md
FSM_practise/cpp/: CMakeLists.txt  README.md
FSM_practise/cpp/src/: CMakeLists.txt  Sensor.cpp
Week2/: README.md
Week2/cpp/src/: CMakeLists.txt  FSM.cpp  FSM.h  Sensor.h  TSensor.hpp  week2.cpp
Week2/simulink/: README.md  Week2.slx
simple_motion/: CMakeLists.txt  README.md  TODO.md  commands_example.json  simple_motion.cpp
simple_motion/modules/: FindCppUnit.cmake  FindODE.cmake  FindXENOMAI.cmake
simple_motion/src/: CMakeLists.txt  global_variables.cpp  main.cpp  main_ui.cpp  unit_test.cpp
simple_motion/src/include/: all_tasks.h  global_variables.h  motion_types.h  task_debug.h  task_trajectory_generator.h
simple_motion/src/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.h  linear_interpolation.cpp  linear_interpolation.h  trapezoid_interpolation.cpp  trapezoid_interpolation.h
simple_motion/src/interpolator/: CMakeLists.txt  interpolation.h  trapezoid_interpolation.cpp  trapezoid_interpolation.h
simple_motion/src/tasks/: command_sender.cpp  command_sender.h  debug.cpp  ode.cpp  ode.h  print_to_files.cpp  task_command_sender.cpp  task_debug.cpp  task_trajectory_generator.cpp  trajectory_generator.cpp  ui.cpp  ui.h
simple_motion/src/test/: LinearInterpolationTest.cpp  LinearInterpolationTest.h  TestUnitTest.cpp  TestUnitTest.h  TrapezoidInterpolationTest.cpp  TrapezoidInterpolationTest.h
