cmake_minimum_required(VERSION 2.6)

project(simple_motion)

SET(CMAKE_CXX_STANDARD 11)
 
# CURRENT DIRECTORY
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)

SET(CMAKE_CXX_FLAGS "-D_GNU_SOURCE -D_REENTRANT -D__XENO__")
SET(CMAKE_EXE_LINKER_FLAGS "-Xlinker -rpath -Xlinker /usr/xenomai/lib ")

INCLUDE_DIRECTORIES(/usr/xenomai/include)

LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/xenomai/lib)

add_subdirectory(src)
